# mairu

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  HTTP_API_SPEC.md  README.md  README.txt  SECURITY.md  TODO  build.rs  releng.md
.github/actions/setup/: action.yml
.github/workflows/: _test.yml  ci.yml  release.yml
pkg/debian/: postinst
proto/: mairu.proto
src/: agent.rs  api_client.rs  auth_flow_manager.rs  auto.rs  awssso_client.rs  client.rs  config.rs  credential_cache.rs  ecs_server.rs  error.rs  ext_awssso.rs  ext_axum.rs  ext_oauth2.rs  lib.rs  main.rs  oauth_awssso.rs  oauth_awssso_code.rs  oauth_awssso_device_code.rs  oauth_code.rs  oauth_code_ok.html  oauth_device_code.rs  oauth_refresh_token.rs  os.rs  ppid.rs  proto.rs  session_manager.rs  singleflight.rs  sts_assume_role.rs  terminal.rs  token.rs  token_manager.rs  utils.rs
src/cmd/: agent.rs  credential_process.rs  exec.rs  kill_agent.rs  list_roles.rs  list_sessions.rs  login.rs  mod.rs  refresh.rs  setup_sso.rs  show.rs
src/examples/: test.rs
